<resources>
    <string name="app_name">Librería Franklin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Catálogo</string>
    <string name="title_notifications">Mi usuario</string>
    <string name="title_contact">Contacto</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="save">Guardar</string>
    <string name="mail">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="leave_message">Dejanos tu mensaje</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="micuenta">Mi Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings para activity_pago -->
    <string name="virtual_pago">Pago Virtual</string>
    <string name="virtual_local">Pago Local</string>
    <string name="nombre_completo">Nombre como figura en la tarjeta</string>
    <string name="numero_tarjeta">Número de tarjeta</string>
    <string name="fecha_expiracion">Fecha de expiración</string>
    <string name="codigo_seguridad">CVV</string>
    <string name="btn_confirmacion">Confirmar compra</string>
    <string name="btn_volver">Volver</string>


    <!-- Strings para activity_checkout -->

    <!-- Para titulos -->
    <string name="titulo_envioDatos_checkout">Datos para el envío</string>
    <string name="titulo_retiroLocal_checkout">Retiro por local</string>
    <string name="titulo_envíoDomicilio_checkout">Envío a domicilio</string>
    <!-- Para botones -->
    <string name="button_irPagar_chackout">Ir a pagar</string>
    <string name="button_volver_chackout">Volver</string>
    <!-- Para hints -->
    <string name="hint_nombrecompleto_checkout">Nombre y apellido</string>
    <string name="hint_correoelectrónico_checkout">Correo electronico</string>
    <string name="hint_códigoarea_checkout">Código de área</string>
    <string name="hint_númerotelefono_checkout">Número de teléfono</string>
    <string name="hint_calleynúmero_checkout">Calle y número</string>
    <string name="hint_localidad_checkout">Localidad</string>
    <string name="hint_provincia_checkout">Provincia</string>
    <string name="hint_códigopostal_checkout">Código postal</string>

    <!-- Strings para activity_feedback_error_buscador -->

    <!--Strings para text-->
    <string name="text_losiento_feedback_error">Lo sentimos :(</string>
    <string name="text_noencuentrolibros_feedback_error">No encontramos el libro que estas buscando</string>

    <!--Strings para button-->
    <string name="button_volver_feedback_error">Volver al catálogo</string>

    <string name="volver_atras">Volver hacia atrás</string>
    <string name="ir_al_carrito">Ir al carrito</string>
    <string name="portada_del_libro">Imagen de la portada del libro</string>
    <string name="iniciar_compra">Iniciar compra</string>
    <string name="imagen_cami_n">Imagen camión</string>
    <string name="imagen_de_tarjeta">Imagen de tarjeta</string>
    <string name="imagen_punto">Imagen punto</string>
    <string name="confirmacion_compra">Compra realizada</string>

    <!--Strings para activity About Us-->
    <string name="btn_backButton">volver</string>
    <string name="titulo_sobreNos">Sobre nosotros</string>
    <string name="texto_sobreNos">En Librería Franklin, hemos creado una plataforma digital donde podrás sumergirte en el apasionante mundo de la lectura desde la comodidad de tu hogar. Tendrás acceso a un extenso catálogo de libros de diversas temáticas y géneros.</string>
    <string name="subtit_explora">Explora y encuentra</string>
    <string name="texto_explora">Nuestra plataforma te permite explorar fácilmente nuestro catálogo.</string>
    <string name="subtit_info">Información detallada</string>
    <string name="texto_info">Además de navegar por nuestro catálogo, podrás acceder a información detallada sobre cada libro, sinópsis y reseña.</string>
    <string name="subtit_compra">Compra con confianza</string>
    <string name="texto_compra">Con unos simples pasos, podrás adquirir tus libros favoritos y tenerlos en tus manos en poco tiempo. </string>
    <string name="subtit_gestiona">Gestioná tu experiencia</string>
    <string name="texto_gestiona">En tu perfil personal, tendrás acceso a tu historial de compras, donde podrás revisar tus pedidos anteriores y realizar un seguimiento de tus lecturas. </string>
    <string name="subtit_unete">Únete a la Comunidad de Lectores</string>
    <string name="texto_unete">Descubre nuevas lecturas, comparte tus opiniones y encuentra recomendaciones personalizadas. </string>
    <string name="texto_final">Visita nuestra página web hoy mismo y déjate llevar por el maravilloso mundo de la lectura con Librería Franklin. ¡Empieza tu viaje literario hoy mismo!</string>
    <string name="title_about">Sobre Nosotros</string>

    <!-- Strings para activity_admin_dashboard -->
    <string name="titulo_panelAdmin">Panel Admin</string>
    <string name="btn_addBook">Agregar Libro</string>
    <string name="btn_delBook">Eliminar Libro</string>
    <string name="btn_editBook">Editar Libro</string>
    <string name="text1">Titulo del Libro</string>
    <string name="text2">Nombre del Autor</string>
    <string name="text3">Precio</string>
    <string name="text4">Sinopsis</string>
    <string name="text5">Selecciona Portada</string>
    <string name="book_details">Vas a eliminar el siguiente libro:\n\nTítulo: %1$s\n\nAutor: %2$s\n\nSinopsis: %3$s\n\nPrecio: %4$s</string>
    <string name="imagen_de_persona">Imagen de persona</string>
    <string name="bot_n_para_agregar_al_carrito">Botón para agregar al carrito</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="te_pueden_interesar">Te pueden interesar</string>
    <string name="alice_oseman">Alice Oseman</string>
    <string name="heartstopper">Heartstopper</string>
    <string name="sinopsis_charlie_y_nick_van_al_mismo_colegio_aunque_nunca_se_hab_an_cruzado_hasta_el_d_a_en_que_los_hacen_sentarse_juntos_en_su_grupo_de_estudio_muy_pronto_se_vuelven_amigos_y_m_s_pronto_a_n_charlie">Sinopsis: Charlie y Nick van al mismo colegio; aunque nunca se habían cruzado hasta el día en que los hacen sentarse juntos en su grupo de estudio. Muy pronto se vuelven amigos y más pronto aún Charlie</string>
    <string name="_6_700_00">$6.700,00</string>
    <string name="mi_carrito">Mi carrito</string>
    <string name="_10000">$10000</string>
    <string name="total">Total</string>
    <string name="arte">Arte</string>
    <string name="ciencia">Ciencia</string>
    <string name="economia">Economia</string>
    <string name="fantasia">Fantasia</string>
    <string name="todos">Todos</string>
    <string name="busc_por_g_nero_autor_t_tulo">Buscá por género, autor, título</string>
    <string name="audio_catalogo">Deslice por la pantalla para navegar por el catálogo de libros</string>
    <string name="dni">DNI</string>
    <string name="volver_al_cat_logo">VOLVER AL CATÁLOGO</string>
    <string name="imagen_de_confirmaci_n_de_compra">Imagen de confirmación de compra</string>
    <string name="muchas_gracias_por_tu_compra">Muchas gracias por tu compra</string>
    <string name="compra_realizada">Compra realizada</string>
    <string name="_3123">3123</string>
    <string name="n_mero_de_orden">Número de orden:</string>
    <string name="el_pago_fue_realizado_con_xito">El pago fue realizado con éxito</string>
    <string name="icono_de_mapa">Icono de mapa</string>
    <string name="envianos_un_mensaje_y_te_contestaremos_a_la_brevedad">Envianos un mensaje y te contestaremos a la brevedad.</string>
    <string name="encontranos_en">Encontranos en</string>
    <string name="estemos_en_contacto">Estemos en contacto</string>
    <string name="humberto_primo_680_c_rdoba_argentina">Humberto Primo 680. Córdoba, Argentina.</string>
    <string name="imagen_de_error">Imagen de error</string>
    <string name="imagen_de_pantalla_de_inicio_de_sesi_n">Imagen de pantalla de inicio de sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="o">O</string>
    <string name="te_damos_la_bienvenida_nos_alegra_tenerte_por_ac">Te damos la bienvenida. Nos alegra tenerte por acá.</string>
    <string name="orden_1234">Orden #1234</string>
    <string name="en_proceso">En Proceso</string>
    <string name="lista_de_los_productos_comprados_y_sus_precios_en_prceso_de_construcci_n">Lista de los productos comprados y sus precios (en Prceso de construcción)</string>
    <string name="icono_modificar">Icono Modificar</string>
    <string name="lucianofernandez_gmail_com">lucianofernandez@gmail.com</string>
    <string name="luciano_fernandez">Luciano Fernandez</string>
    <string name="logo_american_express">Logo American Express</string>
    <string name="logo_mastercard">Logo Mastercard</string>
    <string name="logo_visa">Logo Visa</string>
    <string name="humberto_primo_680">- Humberto Primo 680</string>
    <string name="c_rdoba_capital_argentina">- Córdoba, Capital, Argentina</string>
    <string name="piso_2_oficina_22">- Piso 2, Oficina 22</string>
    <string name="complejo_capitalinas_edificio_suqu_a">- Complejo Capitalinas, Edificio Suquía</string>
    <string name="ir_a_panel_admin">Ir a panel admin</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="icono_de_eliminar">Icono de eliminar</string>
    <string name="icono_de_modificar_informaci_n">Icono de modificar información</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="icono_de_modificar_nombre">Icono de modificar nombre</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="agregar_libro">Agregar libro</string>
    <string name="imagen_del_libro">Imagen del libro</string>
    <string name="_1">1</string>
    <string name="eliminar_del_carrito">Eliminar del carrito</string>
    <string name="fondo">Fondo</string>
    <string name="restar_unidad">Restar unidad</string>

    <!-- Strings para activity_admin_edit_book -->
    <string name="titulo_editBook">Editar Libro</string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>


</resources>