<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:contentDescription="@string/btn_backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />


    <TextView
        android:id="@+id/titleAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/titulo_sobreNos"
        android:textColor="@color/color1"
        android:textFontWeight="500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/texto_sobreNos"
        android:textColor="@color/grey_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAbout"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/subtit_explora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/subtit_explora"
        android:textColor="@color/color1"
        android:textFontWeight="500"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_about" />

    <TextView
        android:id="@+id/texto_explora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/texto_explora"
        android:textColor="@color/grey_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtit_explora"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/subtit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/subtit_info"
        android:textColor="@color/color1"
        android:textFontWeight="500"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_explora" />

    <TextView
        android:id="@+id/texto_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxWidth="370dp"
        android:minWidth="100dp"
        android:text="@string/texto_info"
        android:textColor="@color/grey_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtit_info" />

    <TextView
        android:id="@+id/subtit_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/subtit_compra"
        android:textColor="@color/color1"
        android:textFontWeight="500"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_info" />

    <TextView
        android:id="@+id/texto_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/texto_compra"
        android:textColor="@color/grey_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtit_compra"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/subtit_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/subtit_unete"
        android:textColor="@color/color1"
        android:textFontWeight="500"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_compra" />

    <TextView
        android:id="@+id/texto_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="370dp"
        android:maxWidth="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/texto_final"
        android:textColor="@color/grey_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtit_final"
        app:layout_constraintVertical_bias="0.533" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>